--- a/src/main/resources/loginPage.fxml
+++ b/src/main/resources/loginPage.fxml
@@ -7,18 +7,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginPageController">
+<AnchorPane prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LoginPageController">
    <children>
-      <Button fx:id="loginButton" layoutX="356.0" layoutY="250.0" mnemonicParsing="false" onAction="#loginButtonOnAction" text="Log in" />
-      <TextField fx:id="usernameTextfield" layoutX="220.0" layoutY="122.0" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" promptText="Username" />
-      <TextField fx:id="passwordTextfield" layoutX="220.0" layoutY="160.0" maxWidth="160.0" minWidth="160.0" prefWidth="160.0" promptText="Password" />
+      <Button fx:id="loginButton" layoutX="426.0" layoutY="267.0" mnemonicParsing="false" onAction="#loginButtonOnAction" text="Log In" />
+      <TextField fx:id="usernameTextfield" layoutX="315.0" layoutY="121.0" maxWidth="170.0" minWidth="160.0" prefHeight="26.0" prefWidth="170.0" promptText="Username" />
+      <TextField fx:id="passwordTextfield" layoutX="315.0" layoutY="159.0" maxWidth="170.0" minWidth="160.0" prefHeight="26.0" prefWidth="170.0" promptText="Password" />
       <Text fx:id="errorText" fill="RED" layoutX="220.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <ImageView fx:id="captchaImage" fitHeight="40.0" fitWidth="90.0" layoutX="220.0" layoutY="197.0" pickOnBounds="true">
+      <ImageView fx:id="captchaImage" fitHeight="40.0" fitWidth="90.0" layoutX="315.0" layoutY="212.0" pickOnBounds="true">
          <image>
             <Image url="@Captcha/Captcha-1.png" />
          </image>
       </ImageView>
-      <TextField fx:id="captchaTextfield" layoutX="314.0" layoutY="204.0" maxWidth="65.0" minWidth="65.0" prefHeight="26.0" prefWidth="65.0" promptText="Captcha" />
+      <TextField fx:id="captchaTextfield" layoutX="418.0" layoutY="219.0" maxWidth="65.0" minWidth="65.0" prefHeight="26.0" prefWidth="65.0" promptText="Captcha" />
    </children>
 </AnchorPane>
