--- a/src/main/resources/studentHomePage.fxml
+++ b/src/main/resources/studentHomePage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentHomePageController">
+<AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentHomePageController">
    <children>
       <Text layoutX="14.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CurrentTime" wrappingWidth="78.13671875" />
       <Button layoutX="706.0" layoutY="133.0" mnemonicParsing="false" text="Log Out" />
@@ -21,6 +21,9 @@
       <MenuBar layoutX="14.0" layoutY="14.0" nodeOrientation="LEFT_TO_RIGHT">
         <menus>
             <Menu mnemonicParsing="false" text="Home">
+                <items>
+                    <MenuItem mnemonicParsing="false" onAction="#goToHomePage" text="Home" />
+                </items>
             </Menu>
 
             <Menu mnemonicParsing="false" text="Registration">
