--- a/src/main/resources/studentpages/studentHomePage.fxml
+++ b/src/main/resources/studentpages/studentHomePage.fxml
@@ -21,27 +21,27 @@
         <menus>
             <Menu mnemonicParsing="false" text="Home">
                 <items>
-                    <MenuItem fx:id="homeMenuItem" mnemonicParsing="false" onAction="#goToHomePage" text="Home" />
+                    <MenuItem fx:id="homeMenuItem" mnemonicParsing="false" onAction="#goToStudentHomePage" text="Home" />
                 </items>
             </Menu>
 
             <Menu mnemonicParsing="false" text="Registration">
             <items>
-                <MenuItem fx:id="coursesListMenuItem" mnemonicParsing="false" text="Courses List" />
-                <MenuItem fx:id="professorsListMenuItem" mnemonicParsing="false" text="Professors List" />
+                <MenuItem fx:id="coursesListMenuItem" mnemonicParsing="false" onAction="#goToStudentCoursesListPage" text="Courses List" />
+                <MenuItem fx:id="professorsListMenuItem" mnemonicParsing="false" onAction="#goToStudentProfessorsListPage" text="Professors List" />
             </items>
           </Menu>
 
           <Menu mnemonicParsing="false" text="Educational Services">
             <items>
-                <MenuItem fx:id="weeklyScheduleMenuItem" mnemonicParsing="false" text="Weekly Schedule" />
-                <MenuItem fx:id="examListMenuItem" mnemonicParsing="false" text="Exams List" />
+                <MenuItem fx:id="weeklyScheduleMenuItem" mnemonicParsing="false" onAction="#goToStudentWeeklySchedulePage" text="Weekly Schedule" />
+                <MenuItem fx:id="examListMenuItem" mnemonicParsing="false" onAction="#goToStudentExamsListPage" text="Exams List" />
                 <Menu mnemonicParsing="false" text="Requests">
                     <items>
-                        <MenuItem fx:id="recommendationLetterRequestMenuItem" mnemonicParsing="false" text="Recommendation Letter Request" />
-                        <MenuItem fx:id="certificateStudentRequestMenuItem" mnemonicParsing="false" text="Certificate student Request" />
-                        <MenuItem fx:id="minorMenuItem" mnemonicParsing="false" text="Minor" />
-                        <MenuItem fx:id="withdrawalMenuItem" mnemonicParsing="false" text="Withdrawal" />
+                        <MenuItem fx:id="recommendationLetterRequestMenuItem" mnemonicParsing="false" onAction="#goToStudentRecommendationLetterRequestPage" text="Recommendation Letter Request" />
+                        <MenuItem fx:id="certificateStudentRequestMenuItem" mnemonicParsing="false" onAction="#goToStudentCertificateStudentRequestPage" text="Certificate Student Request" />
+                        <MenuItem fx:id="minorMenuItem" mnemonicParsing="false" onAction="#goToStudentMinorPage" text="Minor" />
+                        <MenuItem fx:id="withdrawalMenuItem" mnemonicParsing="false" onAction="#goToStudentWithdrawalPage" text="Withdrawal" />
                     </items>
                 </Menu>
             </items>
@@ -49,26 +49,24 @@
 
           <Menu mnemonicParsing="false" text="Report Card Affairs">
             <items>
-                <MenuItem fx:id="temporaryScoresMenuItem" mnemonicParsing="false" text="Temporary Scores" />
-                <MenuItem fx:id="studentsEducationStatusMenuItem" mnemonicParsing="false" text="Student's Education Status" />
+                <MenuItem fx:id="temporaryScoresMenuItem" mnemonicParsing="false" onAction="#goToStudentTemporaryScoresPage" text="Temporary Scores" />
+                <MenuItem fx:id="educationStatusMenuItem" mnemonicParsing="false" onAction="#goToStudentEducationStatusPage" text="Education Status" />
             </items>
           </Menu>
 
             <Menu mnemonicParsing="false" text="Profile">
                 <items>
-                    <MenuItem fx:id="viewProfileMenuItem" mnemonicParsing="false" text="View Profile" />
-                    <MenuItem fx:id="editPasswordMenuItem" mnemonicParsing="false" text="Edit Password" />
-                    <MenuItem fx:id="editProfileMenuItem" mnemonicParsing="false" text="Edit Profile" />
+                    <MenuItem fx:id="viewProfileMenuItem" mnemonicParsing="false" onAction="#goToStudentViewProfilePage" text="View Profile" />
+                    <MenuItem fx:id="editPasswordMenuItem" mnemonicParsing="false" onAction="#goToStudentEditPasswordPage" text="Edit Password" />
+                    <MenuItem fx:id="editProfileMenuItem" mnemonicParsing="false" onAction="#goToStudentEditProfilePage" text="Edit Profile" />
                 </items>
             </Menu>
-
-
-
         </menus>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </MenuBar>
+       
       <Text layoutX="338.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Supervisor" />
       <Text layoutX="314.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration License" />
       <Text layoutX="320.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration Time" />
