--- a/src/main/resources/studentpages/studentMinorPage.fxml
+++ b/src/main/resources/studentpages/studentMinorPage.fxml
@@ -19,13 +19,6 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pagecontrollers.studentpages.StudentMinorPageController">
     <children>
-
-        <Text fx:id="currentTimeText" layoutX="14.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CurrentTime" wrappingWidth="78.13671875" />
-        <Button fx:id="logOutButton" layoutX="706.0" layoutY="133.0" mnemonicParsing="false" onMouseClicked="#logOutButtonClick" text="Log Out" />
-        <Text fx:id="lastTimeLoggedInText" layoutX="208.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Time Logged In : LastTimeLoggedIn" />
-        <ImageView fx:id="UIProfileImageView" fitHeight="50.0" fitWidth="50.0" layoutX="710.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
-        <Text fx:id="UINameText" layoutX="719.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-        <Text fx:id="UIEmailText" layoutX="721.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
         <MenuBar layoutX="14.0" layoutY="14.0" nodeOrientation="LEFT_TO_RIGHT">
             <menus>
                 <Menu mnemonicParsing="false" text="Home">
@@ -75,6 +68,12 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
         </MenuBar>
+        <ImageView fx:id="UIProfileImageView" fitHeight="50.0" fitWidth="50.0" layoutX="710.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
+        <Text fx:id="UINameText" layoutX="719.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+        <Text fx:id="UIEmailText" layoutX="721.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
+        <Button fx:id="logOutButton" layoutX="706.0" layoutY="133.0" mnemonicParsing="false" text="Log Out" onMouseClicked="#logOutButtonClick"/>
+        <Text fx:id="currentTimeText" layoutX="14.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CurrentTime" wrappingWidth="78.13671875" />
+        <Text fx:id="lastTimeLoggedInText" layoutX="208.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Time Logged In : LastTimeLoggedIn" />
 
         <Text layoutX="338.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Minor Requests" />
 
@@ -122,11 +121,11 @@
             <RowConstraints />
          </rowConstraints>
         </GridPane>
-      <TextField fx:id="titleTextField" layoutX="29.0" layoutY="378.0" prefHeight="26.0" prefWidth="100.0" promptText="Title" />
-      <TextField fx:id="bodyTextField" layoutX="137.0" layoutY="378.0" prefHeight="26.0" prefWidth="320.0" promptText="Body" />
-      <Button fx:id="addRequestButton" layoutX="588.0" layoutY="412.0" mnemonicParsing="false" onAction="#addRequestButtonOnAction" text="Add Request" />
-      <Text fx:id="errorText" fill="RED" layoutX="206.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <TextField fx:id="destinationCollegeIdTextField" layoutX="465.0" layoutY="378.0" prefHeight="26.0" prefWidth="100.0" promptText="Dest. College Id" />
-      <TextField fx:id="minorFieldIdTextField" layoutX="572.0" layoutY="378.0" prefHeight="26.0" prefWidth="100.0" promptText="Minor Field Id" />
+        <TextField fx:id="titleTextField" layoutX="29.0" layoutY="378.0" prefHeight="26.0" prefWidth="100.0" promptText="Title" />
+        <TextField fx:id="bodyTextField" layoutX="137.0" layoutY="378.0" prefHeight="26.0" prefWidth="320.0" promptText="Body" />
+        <TextField fx:id="destinationCollegeIdTextField" layoutX="465.0" layoutY="378.0" prefHeight="26.0" prefWidth="100.0" promptText="Dest. College Id" />
+        <TextField fx:id="minorFieldIdTextField" layoutX="572.0" layoutY="378.0" prefHeight="26.0" prefWidth="100.0" promptText="Minor Field Id" />
+        <Button fx:id="addRequestButton" layoutX="588.0" layoutY="412.0" mnemonicParsing="false" onAction="#addRequestButtonOnAction" text="Add Request" />
+        <Text fx:id="errorText" fill="RED" layoutX="206.0" layoutY="422.0" strokeType="OUTSIDE" strokeWidth="0.0" />
     </children>
 </AnchorPane>
