--- a/src/main/resources/studentpages/studentWeeklySchedulePage.fxml
+++ b/src/main/resources/studentpages/studentWeeklySchedulePage.fxml
@@ -75,39 +75,39 @@
 
         <Text layoutX="338.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="will be a weekly plan" />
 
-        <GridPane alignment="CENTER" hgap="10.0" layoutX="20.0" layoutY="80.0" maxHeight="500.0" maxWidth="750.0" minHeight="0.0" minWidth="750.0" prefHeight="300.0" prefWidth="750.0" vgap="10.0">
+        <GridPane alignment="CENTER" hgap="10.0" layoutX="5.0" layoutY="80.0" maxHeight="500.0" maxWidth="750.0" minHeight="0.0" minWidth="750.0" prefHeight="300.0" prefWidth="750.0" vgap="10.0">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
             <TableView fx:id="tableView" GridPane.columnIndex="0"
                        GridPane.rowIndex="1">
                 <columns>
-                    <TableColumn text="Sunday" prefWidth="100" maxWidth="150">
-                        <cellValueFactory><PropertyValueFactory property="#sunday" />
+                    <TableColumn text="Sunday" prefWidth="90" maxWidth="150">
+                        <cellValueFactory><PropertyValueFactory property="sunday" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Monday" prefWidth="100" maxWidth="150">
-                        <cellValueFactory><PropertyValueFactory property="#monday" />
+                    <TableColumn text="Monday" prefWidth="90" maxWidth="150">
+                        <cellValueFactory><PropertyValueFactory property="monday" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Tuesday" prefWidth="100" maxWidth="150">
-                        <cellValueFactory><PropertyValueFactory property="#tuesday" />
+                    <TableColumn text="Tuesday" prefWidth="90" maxWidth="150">
+                        <cellValueFactory><PropertyValueFactory property="tuesday" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Wednesday" prefWidth="100" maxWidth="150">
-                        <cellValueFactory><PropertyValueFactory property="#wednesday" />
+                    <TableColumn text="Wednesday" prefWidth="90" maxWidth="150">
+                        <cellValueFactory><PropertyValueFactory property="wednesday" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Thursday" prefWidth="100" maxWidth="150">
-                        <cellValueFactory><PropertyValueFactory property="#thursday" />
+                    <TableColumn text="Thursday" prefWidth="90" maxWidth="150">
+                        <cellValueFactory><PropertyValueFactory property="thursday" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Friday" prefWidth="100" maxWidth="150">
-                        <cellValueFactory><PropertyValueFactory property="#friday" />
+                    <TableColumn text="Friday" prefWidth="90" maxWidth="150">
+                        <cellValueFactory><PropertyValueFactory property="friday" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn text="Saturday" prefWidth="100" maxWidth="150">
-                        <cellValueFactory><PropertyValueFactory property="#saturday" />
+                    <TableColumn text="Saturday" prefWidth="90" maxWidth="150">
+                        <cellValueFactory><PropertyValueFactory property="saturday" />
                         </cellValueFactory>
                     </TableColumn>
                 </columns>
