added 'changeCaptchaButton' everywhere

--- a/src/main/resources/professorpages/professorEditPasswordPage.fxml
+++ b/src/main/resources/professorpages/professorEditPasswordPage.fxml
@@ -77,6 +77,7 @@
         </ImageView>
         <TextField fx:id="captchaTextField" layoutX="405.0" layoutY="270.0" maxWidth="65.0" minWidth="65.0" prefHeight="26.0" prefWidth="65.0" promptText="Captcha" />
         <Button fx:id="editPasswordButton" layoutX="359.0" layoutY="310.0" mnemonicParsing="false" onAction="#editPasswordButtonOnAction" text="Change Password" />
+        <Button fx:id="changeCaptchaButton" layoutX="359.0" layoutY="350.0" mnemonicParsing="false" onAction="#changeCaptchaButtonOnAction" prefHeight="26.0" prefWidth="105.0" text="Change Captcha" />
         <Text fx:id="errorText" fill="RED" layoutX="220.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" />
     </children>
 </AnchorPane>
