added filter buttons to 'studentCoursesListPage.fxml' and modified its table

--- a/src/main/resources/studentpages/studentCoursesListPage.fxml
+++ b/src/main/resources/studentpages/studentCoursesListPage.fxml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
-
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 
 <AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pagecontrollers.studentpages.StudentCoursesListPageController">
    <children>
@@ -71,40 +73,43 @@
        <ImageView fx:id="UIProfileImageView" fitHeight="50.0" fitWidth="50.0" layoutX="710.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
        <Text fx:id="UINameText" layoutX="719.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
        <Text fx:id="UIEmailText" layoutX="721.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
-       <Button fx:id="logOutButton" layoutX="706.0" layoutY="133.0" mnemonicParsing="false" text="Log Out" onMouseClicked="#logOutButtonClick"/>
+       <Button fx:id="logOutButton" layoutX="706.0" layoutY="133.0" mnemonicParsing="false" onMouseClicked="#logOutButtonClick" text="Log Out" />
        <Text fx:id="currentTimeText" layoutX="14.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CurrentTime" wrappingWidth="78.13671875" />
        <Text fx:id="lastTimeLoggedInText" layoutX="208.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Time Logged In : LastTimeLoggedIn" />
 
        <Text layoutX="338.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course List" />
 
-       <GridPane alignment="CENTER" hgap="10.0" layoutX="30.0" layoutY="80.0" maxHeight="500.0" maxWidth="700.0" minHeight="0.0" minWidth="700.0" prefHeight="300.0" prefWidth="700.0" vgap="10.0">
+       <GridPane alignment="CENTER" hgap="10.0" layoutX="44.0" layoutY="80.0" maxHeight="500.0" maxWidth="700.0" minHeight="0.0" minWidth="700.0" prefHeight="300.0" prefWidth="700.0" vgap="10.0">
            <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
            </padding>
-           <TableView fx:id="tableView" GridPane.columnIndex="0"
-                      GridPane.rowIndex="1">
+           <TableView fx:id="tableView" GridPane.columnIndex="0" GridPane.rowIndex="1">
                <columns>
-                   <TableColumn text="Course Name" prefWidth="150" maxWidth="250">
+                   <TableColumn maxWidth="100" prefWidth="100" text="Course Number">
+                       <cellValueFactory><PropertyValueFactory property="courseNumber" />
+                       </cellValueFactory>
+                   </TableColumn>
+                   <TableColumn maxWidth="250" prefWidth="120.0" text="Course Name">
                        <cellValueFactory><PropertyValueFactory property="name" />
                        </cellValueFactory>
                    </TableColumn>
-                   <TableColumn text="College Id" prefWidth="100" maxWidth="100">
+                   <TableColumn maxWidth="100" prefWidth="80" text="College Id">
                        <cellValueFactory><PropertyValueFactory property="collegeId" />
                        </cellValueFactory>
                    </TableColumn>
-                   <TableColumn text="Professor Id" prefWidth="100" maxWidth="100">
+                   <TableColumn maxWidth="100" prefWidth="80" text="Professor Id">
                        <cellValueFactory><PropertyValueFactory property="professorId" />
                        </cellValueFactory>
                    </TableColumn>
-                   <TableColumn text="Holding Semester" prefWidth="150" maxWidth="150">
+                   <TableColumn maxWidth="150" prefWidth="120.0" text="Holding Semester">
                        <cellValueFactory><PropertyValueFactory property="holdingSemester" />
                        </cellValueFactory>
                    </TableColumn>
-                   <TableColumn text="SCH" prefWidth="40" maxWidth="40">
+                   <TableColumn maxWidth="40" prefWidth="40" text="SCH">
                        <cellValueFactory><PropertyValueFactory property="semesterCreditHours" />
                        </cellValueFactory>
                    </TableColumn>
-                   <TableColumn text="Exam Date" prefWidth="70" maxWidth="70">
+                   <TableColumn maxWidth="70" prefWidth="70" text="Exam Date">
                        <cellValueFactory><PropertyValueFactory property="examDate" />
                        </cellValueFactory>
                    </TableColumn>
@@ -114,6 +119,18 @@
                    </FXCollections>
                </items>
            </TableView>
-       </GridPane>
+         <columnConstraints>
+            <ColumnConstraints />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
+           </GridPane>
+       <TextField fx:id="professorNameTextField" layoutX="179.0" layoutY="387.0" promptText="Professor Name" />
+       <TextField fx:id="collegeIdTextField" layoutX="337.0" layoutY="387.0" promptText="College Id" />
+       <TextField fx:id="courseNumberTextField" layoutX="497.0" layoutY="387.0" promptText="Course Number" />
+       <Button fx:id="filterButton" layoutX="657.0" layoutY="387.0" mnemonicParsing="false" onAction="#filterButtonOnAction" text="Filter" />
+       <Text fx:id="errorText" fill="RED" layoutX="13.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="149.60000000000002" />
    </children>
 </AnchorPane>
