--- a/src/main/resources/professorpages/professorEditProfessorsPage.fxml
+++ b/src/main/resources/professorpages/professorEditProfessorsPage.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,7 +16,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pagecontrollers.professorpages.ProfessorEducationStatusPageController">
+<?import javafx.scene.control.TextField?>
+<AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pagecontrollers.professorpages.ProfessorEditProfessorsPageController">
     <children>
         <MenuBar layoutX="14.0" layoutY="14.0" nodeOrientation="LEFT_TO_RIGHT">
             <menus>
@@ -75,28 +75,36 @@
         <Text fx:id="currentTimeText" layoutX="14.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CurrentTime" wrappingWidth="78.13671875" />
         <Text fx:id="lastTimeLoggedInText" layoutX="208.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Time Logged In : LastTimeLoggedIn" />
 
-        <Text layoutX="335.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Education Status" />
+        <Text layoutX="335.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Professor List" />
 
-        <GridPane alignment="CENTER" hgap="10.0" layoutX="80.0" layoutY="80.0" maxHeight="500.0" maxWidth="700.0" minHeight="0.0" minWidth="700.0" prefHeight="300.0" prefWidth="700.0" vgap="10.0">
+        <GridPane alignment="CENTER" hgap="10.0" layoutX="20.0" layoutY="80.0" maxHeight="500.0" maxWidth="700.0" minHeight="0.0" minWidth="700.0" prefHeight="300.0" prefWidth="700.0" vgap="10.0">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
-            <TableView fx:id="tableView" GridPane.rowIndex="1">
+            <TableView fx:id="tableView" prefWidth="653.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
                 <columns>
-                    <TableColumn maxWidth="150" prefWidth="100" text="Course Id">
-                        <cellValueFactory><PropertyValueFactory property="courseId" />
+                    <TableColumn maxWidth="250" prefWidth="180" text="Professor Name">
+                        <cellValueFactory><PropertyValueFactory property="name" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn maxWidth="150" prefWidth="100" text="Student Id">
-                        <cellValueFactory><PropertyValueFactory property="studentId" />
+                    <TableColumn maxWidth="100" prefWidth="70" text="College Id">
+                        <cellValueFactory><PropertyValueFactory property="collegeId" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn maxWidth="100" prefWidth="100" text="Status">
-                        <cellValueFactory><PropertyValueFactory property="status" />
+                    <TableColumn maxWidth="100" prefWidth="70" text="Field Id">
+                        <cellValueFactory><PropertyValueFactory property="fieldId" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn maxWidth="100" prefWidth="100" text="Score">
-                        <cellValueFactory><PropertyValueFactory property="score" />
+                    <TableColumn maxWidth="180" prefWidth="150" text="Professor Level">
+                        <cellValueFactory><PropertyValueFactory property="professorLevel" />
+                        </cellValueFactory>
+                    </TableColumn>
+                    <TableColumn maxWidth="30" prefWidth="30" text="Age">
+                        <cellValueFactory><PropertyValueFactory property="age" />
+                        </cellValueFactory>
+                    </TableColumn>
+                    <TableColumn maxWidth="250" prefWidth="150" text="Email">
+                        <cellValueFactory><PropertyValueFactory property="email" />
                         </cellValueFactory>
                     </TableColumn>
                 </columns>
@@ -105,18 +113,18 @@
                     </FXCollections>
                 </items>
             </TableView>
-         <columnConstraints>
-            <ColumnConstraints />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-         </rowConstraints>
+            <columnConstraints>
+                <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints />
+                <RowConstraints />
+            </rowConstraints>
         </GridPane>
-      <TextField fx:id="studentNameTextField" layoutX="35.0" layoutY="111.0" promptText="Student Name" />
-      <TextField fx:id="studentIdTextField" layoutX="35.0" layoutY="142.0" promptText="Student Id" />
-      <TextField fx:id="courseIdTextField" layoutX="35.0" layoutY="173.0" promptText="Course Id" />
-      <Button fx:id="filterButton" layoutX="141.0" layoutY="205.0" mnemonicParsing="false" onAction="#filterButtonOnAction" text="Filter" />
-      <Text fx:id="errorText" fill="RED" layoutX="33.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+        <TextField fx:id="professorNameTextField" layoutX="179.0" layoutY="387.0" promptText="Professor Name" />
+        <TextField fx:id="collegeIdTextField" layoutX="337.0" layoutY="387.0" promptText="College Id" />
+        <TextField fx:id="professorLevelTextField" layoutX="497.0" layoutY="387.0" promptText="Professor Level" />
+        <Button fx:id="filterButton" layoutX="657.0" layoutY="387.0" mnemonicParsing="false" onAction="#filterButtonOnAction" text="Filter" />
+        <Text fx:id="errorText" fill="RED" layoutX="5.0" layoutY="384.0" strokeType="OUTSIDE" strokeWidth="0.0" />
     </children>
 </AnchorPane>
