--- a/src/main/resources/professorpages/professorDissertationDefenceRequestPage.fxml
+++ b/src/main/resources/professorpages/professorDissertationDefenceRequestPage.fxml
@@ -8,16 +8,13 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pagecontrollers.professorpages.ProfessorTemporaryScoresPageController">
+<AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pagecontrollers.professorpages.ProfessorDissertationDefenceRequestPageController">
     <children>
         <MenuBar layoutX="14.0" layoutY="14.0" nodeOrientation="LEFT_TO_RIGHT">
             <menus>
@@ -77,36 +74,24 @@
         <Text fx:id="currentTimeText" layoutX="14.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CurrentTime" wrappingWidth="78.13671875" />
         <Text fx:id="lastTimeLoggedInText" layoutX="208.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Time Logged In : LastTimeLoggedIn" />
 
-        <Text layoutX="335.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Temporary Scores List" />
+        <Text layoutX="338.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dissertation Defence Requests" />
 
-        <GridPane alignment="CENTER" hgap="10.0" layoutX="165.0" layoutY="80.0" maxHeight="500.0" maxWidth="700.0" minHeight="0.0" minWidth="570.0" prefHeight="300.0" prefWidth="570.0" vgap="10.0">
+        <GridPane alignment="CENTER" hgap="10.0" layoutX="10.0" layoutY="80.0" maxHeight="500.0" maxWidth="727.0" minHeight="0.0" minWidth="568.0" prefHeight="300.0" prefWidth="727.0" vgap="10.0">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
             <TableView fx:id="tableView" GridPane.columnIndex="0" GridPane.rowIndex="1">
                 <columns>
-                    <TableColumn maxWidth="150" prefWidth="70.0" text="Course Id">
-                        <cellValueFactory><PropertyValueFactory property="courseId" />
+                    <TableColumn maxWidth="150" prefWidth="100" text="Student Id">
+                        <cellValueFactory><PropertyValueFactory property="senderId" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn maxWidth="150" prefWidth="70.0" text="Student Id">
-                        <cellValueFactory><PropertyValueFactory property="studentId" />
+                    <TableColumn maxWidth="250" prefWidth="100" text="Title">
+                        <cellValueFactory><PropertyValueFactory property="title" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn maxWidth="150" prefWidth="90.0" text="Professor Id">
-                        <cellValueFactory><PropertyValueFactory property="professorId" />
-                        </cellValueFactory>
-                    </TableColumn>
-                    <TableColumn maxWidth="100" prefWidth="70.0" text="Score">
-                        <cellValueFactory><PropertyValueFactory property="score" />
-                        </cellValueFactory>
-                    </TableColumn>
-                    <TableColumn maxWidth="100" prefWidth="100" text="Objection">
-                        <cellValueFactory><PropertyValueFactory property="objection" />
-                        </cellValueFactory>
-                    </TableColumn>
-                    <TableColumn maxWidth="100" prefWidth="100" text="Response">
-                        <cellValueFactory><PropertyValueFactory property="response" />
+                    <TableColumn maxWidth="500" prefWidth="250.0" text="Body">
+                        <cellValueFactory><PropertyValueFactory property="body" />
                         </cellValueFactory>
                     </TableColumn>
                 </columns>
@@ -115,26 +100,6 @@
                     </FXCollections>
                 </items>
             </TableView>
-         <columnConstraints>
-            <ColumnConstraints />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-         </rowConstraints>
         </GridPane>
-        <TextField fx:id="studentNameTextField" layoutX="35.0" layoutY="111.0" promptText="Student Name" />
-        <TextField fx:id="studentIdTextField" layoutX="35.0" layoutY="142.0" promptText="Student Id" />
-      <TextField fx:id="professorNameTextField" layoutX="35.0" layoutY="173.0" promptText="Professor Name" />
-      <TextField fx:id="professorIdTextField" layoutX="35.0" layoutY="204.0" promptText="Professor Id" />
-        <TextField fx:id="courseIdTextField" layoutX="35.0" layoutY="235.0" promptText="Course Id" />
-        <Button fx:id="filterButton" layoutX="142.0" layoutY="266.0" mnemonicParsing="false" onAction="#filterButtonOnAction" text="Filter" />
-        <Text fx:id="errorText" fill="RED" layoutX="33.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <TextField fx:id="courseSummeryIdTextField" layoutX="35.0" layoutY="311.0" promptText="Course Summery Id" />
-      <Button fx:id="courseSummeryButton" layoutX="78.0" layoutY="342.0" mnemonicParsing="false" onAction="#courseSummeryButtonOnAction" text="Course Summery" />
-      <Text fx:id="averageText" layoutX="33.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average" />
-      <Text fx:id="failedText" layoutX="33.0" layoutY="411.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Failed" />
-      <Text fx:id="creditedText" layoutX="164.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credited" />
-      <Text fx:id="averageWithoutFailedText" layoutX="164.0" layoutY="411.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Average Without Failed" />
     </children>
 </AnchorPane>
